Allow searching reservation by multiple steam uids for eligible API users
